--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div><p>了解我不如从我的歌单开始？<a href="https://music.163.com/#/playlist?id=2519897153">青岚客的歌单</a></p></div>
         <div>
             <p>有时候我也会玩原神，第一个人物是枫原万叶</p>
-            <img src="C:\Users\dell\Desktop\网页\网页用图\万叶1.png"width="300"; height="200">
+            <img src="万叶1.png"width="700"; height=“400">
             <a href="https://www.bilibili.com/video/BV1Bq4y1T7N4?from=search&seid=18169183043809793873&spm_id_from=333.337.0.0">（了解一下？）</a>
         </div>
         
