--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div><h1>你好，欢迎来到这里</h1></div>
         <div><p>我是这里的站长</p></div>
         <div><p>了解我不如从我的歌单开始？<a href="https://music.163.com/#/playlist?id=2519897153">青岚客的歌单</a></p></div>
+        <div><img src="歌单名片.png"width="400"; height=“200"></div>
         <div>
             <p>有时候我也会玩原神，第一个人物是枫原万叶</p>
             <img src="万叶1.png"width="700"; height=“400">
